--- a/WarehouseTest/WarehouseTest.csproj
+++ b/WarehouseTest/WarehouseTest.csproj
@@ -32,6 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core">
+      <HintPath>..\..\..\..\..\Downloads\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.DynamicProxy2">
+      <HintPath>..\..\..\..\..\Downloads\Castle.DynamicProxy2.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interceptor.cs" />
+    <Compile Include="ProxyFactory.cs" />
+    <Compile Include="Container.cs" />
     <Compile Include="UI\AddDeliveryForm.cs">
       <SubType>Form</SubType>
     </Compile>
