update stock and item form added query added

--- a/Warehouse.Framework/Warehouse.Framework.csproj
+++ b/Warehouse.Framework/Warehouse.Framework.csproj
@@ -45,5 +45,8 @@
     <Compile Include="Common\StaticFields.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Common\New Text Document %282%29.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
