new look add report

--- a/App.Bus.Services/App.Bus.Services.csproj
+++ b/App.Bus.Services/App.Bus.Services.csproj
@@ -47,6 +47,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReceiptService\ReceiptService.cs" />
     <Compile Include="ReceiptService\ReceiptServiceDAO.cs" />
+    <Compile Include="ReportService\ReportService.cs" />
+    <Compile Include="ReportService\StockItemQuantityReportServiceDAO.cs" />
     <Compile Include="StockService\StockService.cs" />
     <Compile Include="StockService\StockServiceDAO.cs" />
     <Compile Include="TableIdService\TableIdService.cs" />
