--- a/App.Domin.Core/App.Domin.Core.csproj
+++ b/App.Domin.Core/App.Domin.Core.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Contracts\ServiceInterface\IDeliveryService.cs" />
     <Compile Include="Contracts\ServiceInterface\IItemService.cs" />
     <Compile Include="Contracts\ServiceInterface\IReceiptService.cs" />
+    <Compile Include="Contracts\ServiceInterface\IReportService.cs" />
     <Compile Include="Contracts\ServiceInterface\IStockService.cs" />
     <Compile Include="Contracts\ServiceInterface\ITableIdService.cs" />
     <Compile Include="Entities\TypedDataSets\DeliveryDataset.cs">
@@ -61,6 +62,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Entities\TypedDataSets\StockDataSet.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Entities\TypedDataSets\StockItemQuantityReportDataSet.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Entities\TypedDataSets\TableIdDataSet.cs">
@@ -88,6 +92,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Entities\TypedDataTables\ReceiptTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Entities\TypedDataTables\StockItemQuantityReportDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Entities\TypedDataTables\StockTable.cs">
