--- a/WarehouseTest/WarehouseTest.csproj
+++ b/WarehouseTest/WarehouseTest.csproj
@@ -83,12 +83,6 @@
     <Compile Include="UI\DeliveryListForm.Designer.cs">
       <DependentUpon>DeliveryListForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\ItemDetailForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\ItemDetailForm.Designer.cs">
-      <DependentUpon>ItemDetailForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="UI\ItemList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -103,6 +97,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\MainMenuExtentions\AddDeliveryExt.cs" />
+    <Compile Include="UI\MainMenuExtentions\AddItemExt.cs" />
+    <Compile Include="UI\MainMenuExtentions\AddReceiptExt.cs" />
+    <Compile Include="UI\MainMenuExtentions\AddStockExt.cs" />
+    <Compile Include="UI\MainMenuExtentions\DeliveryListExt.cs" />
+    <Compile Include="UI\MainMenuExtentions\ItemListExt.cs" />
+    <Compile Include="UI\MainMenuExtentions\ReceiptListExt.cs" />
+    <Compile Include="UI\MainMenuExtentions\StockItemQuantityReportExt.cs" />
+    <Compile Include="UI\MainMenuExtentions\StockListExt.cs" />
     <Compile Include="UI\models\AddDeliveryTabPage.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -134,6 +137,12 @@
     <Compile Include="UI\ReceiptList.Designer.cs">
       <DependentUpon>ReceiptList.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\StockItemQuantityReportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\StockItemQuantityReportForm.Designer.cs">
+      <DependentUpon>StockItemQuantityReportForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\StockListForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,9 +169,6 @@
     <EmbeddedResource Include="UI\DeliveryListForm.resx">
       <DependentUpon>DeliveryListForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\ItemDetailForm.resx">
-      <DependentUpon>ItemDetailForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UI\ItemList.resx">
       <DependentUpon>ItemList.cs</DependentUpon>
     </EmbeddedResource>
@@ -183,6 +189,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\ReceiptList.resx">
       <DependentUpon>ReceiptList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\StockItemQuantityReportForm.resx">
+      <DependentUpon>StockItemQuantityReportForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\StockListForm.resx">
       <DependentUpon>StockListForm.cs</DependentUpon>
