--- a/App.Bus.Services/App.Bus.Services.csproj
+++ b/App.Bus.Services/App.Bus.Services.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -31,6 +31,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="App.Domin.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\bin\App.Domin.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="App.Framework, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\bin\App.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="App.Framework.UI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\bin\App.Framework.UI.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,26 +59,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReceiptService\ReceiptService.cs" />
     <Compile Include="ReceiptService\ReceiptServiceDAO.cs" />
-    <Compile Include="ReportService\ReportService.cs" />
-    <Compile Include="ReportService\StockItemQuantityReportServiceDAO.cs" />
     <Compile Include="StockService\StockService.cs" />
     <Compile Include="StockService\StockServiceDAO.cs" />
     <Compile Include="TableIdService\TableIdService.cs" />
     <Compile Include="TableIdService\TableIdServiceDAO.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\App.Core.Repo\App.Core.Repo.csproj">
-      <Project>{8B1EF371-C5A0-419E-941A-EA027592466D}</Project>
-      <Name>App.Core.Repo</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\App.Domin.Core\App.Domin.Core.csproj">
-      <Project>{01683487-8163-4067-853D-5F15ADEDED23}</Project>
-      <Name>App.Domin.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Warehouse.Framework\Warehouse.Framework.csproj">
-      <Project>{90F636C7-6DA1-496C-9B56-99DED8BB4BA9}</Project>
-      <Name>Warehouse.Framework</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
