--- a/App.Framework.UI/App.Framework.UI.csproj
+++ b/App.Framework.UI/App.Framework.UI.csproj
@@ -48,20 +48,48 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\AddBaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Model\AddBaseForm.Designer.cs">
+      <DependentUpon>AddBaseForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Model\BaseForm.Designer.cs">
       <DependentUpon>BaseForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\ListBaseForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Model\ListBaseForm.Designer.cs">
+      <DependentUpon>ListBaseForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Model\MessageBoxManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Model\AddBaseForm.resx">
+      <DependentUpon>AddBaseForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Model\BaseForm.resx">
       <DependentUpon>BaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Model\ListBaseForm.resx">
+      <DependentUpon>ListBaseForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
