--- a/Warehouse.Framework/App.Framework.csproj
+++ b/Warehouse.Framework/App.Framework.csproj
@@ -46,12 +46,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Common\DbTablesEnum.cs" />
+    <Compile Include="Entities\Common\ErrorMessage.cs" />
+    <Compile Include="Entities\Common\StaticFields.cs" />
+    <Compile Include="Entities\DataSets\MasterDetailDataset.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Entities\DataSets\BaseDataSet.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Entities\DataTables\BaseTypedDataTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Entities\DataTables\DetailDataTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Entities\DataTables\MasterDataTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ExtentionMenuAttribute.cs" />
     <Compile Include="IBaseService.cs" />
+    <Compile Include="IGenericService.cs" />
     <Compile Include="IMenuExtention.cs" />
     <Compile Include="Interceptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\GenericRepository.cs" />
+    <Compile Include="Repository\MasterDetailDAO.cs" />
+    <Compile Include="Repository\NonMasterDetailDAO.cs" />
     <Compile Include="ServiceFactory.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Entities\Common\New Text Document %282%29.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
