--- a/Warehouse.Framework/App.Framework.csproj
+++ b/Warehouse.Framework/App.Framework.csproj
@@ -65,9 +65,9 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ExtentionMenuAttribute.cs" />
+    <Compile Include="ExtentionMenuListAttribute.cs" />
     <Compile Include="IBaseService.cs" />
     <Compile Include="IGenericService.cs" />
-    <Compile Include="IMenuExtention.cs" />
     <Compile Include="Interceptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\GenericRepository.cs" />
