add castle dlls

--- a/App.Framework.UI/App.Framework.UI.csproj
+++ b/App.Framework.UI/App.Framework.UI.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExtentionMenuAttribute.cs" />
+    <Compile Include="ExtentionMenuListAttribute.cs" />
     <Compile Include="IMenuExtention.cs" />
     <Compile Include="IMenuListExtention.cs" />
     <Compile Include="MainForm.cs">
