--- a/Warehouse.Framework/App.Framework.csproj
+++ b/Warehouse.Framework/App.Framework.csproj
@@ -31,11 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core">
-      <HintPath>..\..\..\..\..\Downloads\Castle.Core.dll</HintPath>
+    <Reference Include="Castle.Core, Version=1.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Dependencies\Dlls\Castle.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Castle.DynamicProxy2">
-      <HintPath>..\..\..\..\..\Downloads\Castle.DynamicProxy2.dll</HintPath>
+    <Reference Include="Castle.DynamicProxy2, Version=2.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Dependencies\Dlls\Castle.DynamicProxy2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -64,8 +66,6 @@
     <Compile Include="Entities\DataTables\MasterDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="ExtentionMenuAttribute.cs" />
-    <Compile Include="ExtentionMenuListAttribute.cs" />
     <Compile Include="IBaseService.cs" />
     <Compile Include="IGenericService.cs" />
     <Compile Include="Interceptor.cs" />
