--- a/App.Framework.UI/App.Framework.UI.csproj
+++ b/App.Framework.UI/App.Framework.UI.csproj
@@ -55,6 +55,10 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MainFormManager.cs" />
+    <Compile Include="Model\ListMenuItem.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Model\MenuListType.cs" />
     <Compile Include="Model\Form\BaseListForm.cs">
       <SubType>Form</SubType>
@@ -78,12 +82,19 @@
       <DependentUpon>BaseForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\MessageBoxManager.cs" />
+    <Compile Include="Model\NumericTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Model\PersianDateTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="StartUp.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
