--- a/Warehouse.Framework/App.Framework.csproj
+++ b/Warehouse.Framework/App.Framework.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Entities\Common\ErrorMessage.cs" />
     <Compile Include="Entities\Common\StaticFields.cs" />
     <Compile Include="Entities\DataRows\IdDataRow.cs" />
-    <Compile Include="Entities\DataSets\MasterDetailDataset.cs">
+    <Compile Include="Entities\DataSets\MasterDetailDataSet.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Entities\DataSets\BaseDataSet.cs">
@@ -61,13 +61,14 @@
     <Compile Include="Entities\DataSets\TableIdDataSet.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Entities\DataTables\BaseDataTable.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Entities\DataTables\BaseTypedDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Entities\DataTables\DetailDataTable.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Entities\DataTables\MasterDataTable.cs">
+    <Compile Include="Entities\DataTables\IDetailDataTable.cs" />
+    <Compile Include="Entities\DataTables\MasterTypedDataTable.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Entities\DataTables\TableIdTable.cs">
@@ -77,7 +78,7 @@
     <Compile Include="IEntityService.cs" />
     <Compile Include="Interceptor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\GenericRepository.cs" />
+    <Compile Include="Repository\Repository.cs" />
     <Compile Include="Repository\MasterDetailDAO.cs" />
     <Compile Include="Repository\NonMasterDetailDAO.cs" />
     <Compile Include="ServiceFactory.cs" />
