change DB init Query

--- a/App.Domin.Core/App.Domin.Core.csproj
+++ b/App.Domin.Core/App.Domin.Core.csproj
@@ -80,5 +80,8 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Entities\Queries\InitializeTablesQuery.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
